# fastapi_auth

./: .config  .gitignore  Dockerfile  README.md  data.json  docker-compose.yml  example.env  mkdocs.yml  mkgendocs.yml  mongo.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql.yml  publish-docs.yml  sanity_checks.yml  tests.yml
api/: app.py
docs/: index.md  license.md
docs/js/: termynal.js
docs/sources/: env_vars.md  security_password.md  verification_checks.md
docs/sources/api/fastapi_auth/: Postgres_access.md  security_secret.md  sqlite_access.md
fastapi_auth/: __init__.py  _mongodb_access.py  _mysql_access.py  _postgres_access.py  _security_secret.py  _sqlite_access.py  endpoints.py  security_api_key.py
tests/: conftest.py  test_functional.py  test_security.py
