[tool.poetry]
name = "fastapi_auth"
version = "1.0"
description = "API Key Authentication for FastAPI"
authors = ["nneji123 <ifeanyinneji777@gmail.com>"]
license = "MIT"
repository = "https://github.com/nneji123/fastapi_auth"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.2,<4"
# 0.70 is needed to have the TestClient object
fastapi = ">=0.70"
# Necessary as older versions don't work on python 3.10
urllib3 = ">=1.26.12"
# Necessary for using the postgres database function
psycopg2 = ">=2.9.5"
passwordgenerator = ">=1.5.1"
# For hashing and salting passwords
bcrypt = ">=4.0.1"
# Email Validation Requirements.
email-validator = ">=1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
requests = "^2.26.0"
pre-commit = "^2.20.0"
pylint = "^2.15.4"
isort = "^5.10.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.report]
omit = ["tests/conftest.py"]
